# rust-doom

./: Cargo.toml  README.md
assets/meta/: doom.toml
assets/shaders/: static.wgsl
engine/: Cargo.toml
engine/src/: context.rs  entities.rs  errors.rs  frame_timers.rs  input.rs  lib.rs  materials.rs  meshes.rs  renderer.rs  shaders.rs  system.rs  text.rs  uniforms.rs  window.rs
game/: Cargo.toml
game/src/: errors.rs  game.rs  game_shaders.rs  level.rs  lib.rs  player.rs  vertex.rs  wad_system.rs
math/: Cargo.toml
math/src/: line.rs
src/: main.rs
wad/: Cargo.toml
wad/src/: archive.rs  errors.rs  image.rs  level.rs  lib.rs  meta.rs  name.rs  tex.rs  types.rs  visitor.rs
