[package]
authors = ["Cristi Cobzarenco <cristi.cobzarenco@gmail.com>"]
name = "engine"
version = "0.1.0"
edition = "2018"

[features]
cargo-clippy = []

[dependencies]
math = { path = "../math" }
engine_derive = { path = "../engine_derive" }

idcontain = "0.7.6"
num-traits = "0.2.19"
rusttype = "0.9.2"
unicode-normalization = "0.1.24"
failure = "0.1.8"
failchain = "0.1018.2"
winit = "0.30.5"
wgpu = "23.0.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
futures = "0.3.30"
tobj = "4.0.0"
image = "0.25.2"
anyhow = "1.0.79"
cgmath = "0.18.0"
pollster = "0.3.0"
lock_api = "0.4.11"

[dependencies.log]
features = ["release_max_level_info"]
version = "0.4.14"

[dev-dependencies]
env_logger = "0.11.5"
