[package]
name = "wad"
version = "0.1.0"
authors = ["Cristi Cobzarenco <cristi.cobzarenco@gmail.com>"]
edition = "2018"

[features]
cargo-clippy = []

[dependencies]
math = { path = "../math" }

bincode = "1.3.2"
log = "0.4.14"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
vec_map = "0.8.2"
indexmap = "2.5.0"
byteorder = "1.3"
geo = "0.28.0"
multimap = "0.10.0"
anyhow = "1.0.95"
